--- a/mucc.html
+++ b/mucc.html
@@ -4,21 +4,21 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Minecraft Ultimate Recipe-Calculator</title>
-    <link rel="icon" type="image/png" href="sword.png">
+    <link rel="icon" type="image/png" href="images/sword.png">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   </head>
-  <body style="font-family: monospace; background-image: url(texture.jpg)">
+  <body style="font-family: monospace; background-image: url(images/stone.png)">
     <div style="max-width: 740px; margin: auto; padding: 10px; background-color: white">
-      <img src="bigcrafting.png" style="float: right">
+      <img src="images/bigcrafting.png" style="float: right">
       <h1>Minecraft Ultimate Crafting-Calculator</h1>
-      <input type="file" id="recipe_file" style="display:none"><a href="javascript:document.getElementById('recipe_file').click()" style="text-decoration: none"><img src="chest.png"> Load recipes</a> <span id="recipe_span"> (0 recipes loaded)</span><br />
+      <input type="file" id="recipe_file" style="display:none"><a href="javascript:document.getElementById('recipe_file').click()" style="text-decoration: none"><img src="images/chest.png"> Load recipes</a> <span id="recipe_span"> (0 recipes loaded)</span><br />
       <br/ >
       Crafting Table:<br />
       <div>
         <input id="craft_input">
-        <input type="button" id="craft_add" style="display:none"><a href="javascript:document.getElementById('craft_add').click()" style="text-decoration: none"><img src="hopper.png"></a>
+        <input type="button" id="craft_add" style="display:none"><a href="javascript:document.getElementById('craft_add').click()" style="text-decoration: none"><img src="images/hopper.png"></a>
       </div>
       <div>
         <textarea id="craft_area" style="width: 100%"></textarea>
@@ -28,7 +28,7 @@
       <div>
         <textarea id="chest_area" style="width: 98%"></textarea>
       </div>
-      <input type="button" id="calculate" style="display:none"><a href="javascript:document.getElementById('calculate').click()" style="text-decoration: none"><img src="crafting.png"> Calculate</a>
+      <input type="button" id="calculate" style="display:none"><a href="javascript:document.getElementById('calculate').click()" style="text-decoration: none"><img src="images/crafting.png"> Calculate</a>
       <div style="line-height: 120%">
         <span id="calculate_span"></span>
       </div>
