Região para a receita gráfica do item, melhorias pequenas

--- a/mucc.html
+++ b/mucc.html
@@ -31,8 +31,8 @@
       </div>
       <input type="button" id="calculate"><a href="javascript:document.getElementById('calculate').click()"><img src="images/sword.png"> Calcular!</a><br />
       <br />
-      <div style="min-height: 480px; line-height: 120%">
-        <span id="calculate_span"></span>
+      <div style="min-height: 480px">
+        <div id="calculate_span" style="line-height: 120%"></div>
       </div>
     </div>
     <script src="mucc.js"></script>
