--- a/mucc.html
+++ b/mucc.html
@@ -11,7 +11,7 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   </head>
   <body>
-    <div style="max-width: 740px; margin: auto; padding: 10px; background-color: white">
+    <div class="main">
       <img src="images/bigcrafting.png" style="float: right">
       <h1>Minecraft Ultimate Crafting-Calculator</h1>
       <input type="file" id="recipe_file"><a href="javascript:document.getElementById('recipe_file').click()"><img src="images/chest.png"> Carregar receitas</a> <span id="recipe_span"> (0 receitas carregadas)</span><br />
@@ -33,6 +33,8 @@
       <br />
       <div style="min-height: 480px">
         <div id="calculate_span" style="line-height: 120%"></div>
+        <br />
+        <br />
       </div>
     </div>
     <script src="mucc.js"></script>
